fix: Input otp gap

--- a/src/components/Input/style/Input.scss
+++ b/src/components/Input/style/Input.scss
@@ -79,7 +79,7 @@ $cls: #{$prefix}-#{$component};
     }
 
     .p-inputotp {
-      gap: 16px;
+      gap: 8px;
     }
 
     &-small input {
